syntax = "proto3";

package airborne.v1;

option go_package = "github.com/ai8future/airborne/gen/go/airborne/v1;airbornev1";

// Provider identifies the AI provider
enum Provider {
  PROVIDER_UNSPECIFIED = 0;
  PROVIDER_OPENAI = 1;
  PROVIDER_GEMINI = 2;
  PROVIDER_ANTHROPIC = 3;

  // Tier 1 - High Usage
  PROVIDER_DEEPSEEK = 10;
  PROVIDER_GROK = 11;
  PROVIDER_MISTRAL = 12;
  PROVIDER_PERPLEXITY = 13;

  // Tier 2 - Enterprise
  PROVIDER_BEDROCK = 20;
  PROVIDER_WATSONX = 21;
  PROVIDER_DATABRICKS = 22;
  PROVIDER_COHERE = 23;

  // Tier 3 - Inference Platforms
  PROVIDER_TOGETHER = 30;
  PROVIDER_FIREWORKS = 31;
  PROVIDER_OPENROUTER = 32;
  PROVIDER_DEEPINFRA = 33;
  PROVIDER_BASETEN = 34;
  PROVIDER_HYPERBOLIC = 35;

  // Tier 4 - Specialized
  PROVIDER_HUGGINGFACE = 40;
  PROVIDER_PREDIBASE = 41;
  PROVIDER_PARASAIL = 42;
  PROVIDER_UPSTAGE = 43;
  PROVIDER_NEBIUS = 44;
  PROVIDER_CEREBRAS = 45;
  PROVIDER_MINIMAX = 46;
}

// Message represents a conversation turn
message Message {
  string role = 1;      // "user", "assistant", "system"
  string content = 2;
  int64 timestamp = 3;  // Unix timestamp (optional)
}

// Usage contains token metrics
message Usage {
  int64 input_tokens = 1;
  int64 output_tokens = 2;
  int64 total_tokens = 3;
}

// Citation represents a source reference from file or web search
message Citation {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_URL = 1;
    TYPE_FILE = 2;
  }
  Type type = 1;
  string provider = 2;      // Which provider generated this citation
  string url = 3;           // For URL citations
  string title = 4;         // Page or file title
  string file_id = 5;       // For file citations
  string filename = 6;      // Original filename
  string snippet = 7;       // Relevant text snippet
  int32 start_index = 8;    // Position in response text
  int32 end_index = 9;
  bool broken_link = 10;    // True if URL was detected as broken
}

// ProviderConfig contains provider-specific settings
message ProviderConfig {
  string api_key = 1;
  string model = 2;
  optional double temperature = 3;
  optional double top_p = 4;
  optional int32 max_output_tokens = 5;
  string base_url = 6;  // Optional custom endpoint

  // Provider-specific options as key-value pairs
  // Examples:
  //   openai: "reasoning_effort" -> "high", "web_search_enabled" -> "true"
  //   gemini: "safety_threshold" -> "BLOCK_NONE", "thinking_level" -> "MEDIUM"
  //   anthropic: "max_tokens_to_sample" -> "4096"
  map<string, string> extra_options = 10;
}

// Tool defines a function that the model can call
message Tool {
  // Name of the tool/function (must be a valid identifier)
  string name = 1;

  // Description of what the tool does (helps model decide when to use it)
  string description = 2;

  // JSON Schema for the tool parameters (as JSON string)
  // Example: {"type": "object", "properties": {"query": {"type": "string"}}, "required": ["query"]}
  string parameters_schema = 3;

  // Whether to require strict JSON schema adherence (OpenAI-specific)
  bool strict = 4;
}

// ToolCall represents the model's request to invoke a tool
message ToolCall {
  // Unique ID for this tool call (used to match with ToolResult)
  string id = 1;

  // Name of the tool to invoke
  string name = 2;

  // Arguments as JSON string
  string arguments = 3;
}

// ToolResult contains the output from a tool execution
message ToolResult {
  // ID of the tool call this is responding to
  string tool_call_id = 1;

  // Output from the tool as string (typically JSON)
  string output = 2;

  // Whether the tool execution failed
  bool is_error = 3;
}

// CodeExecutionResult contains output from code execution
message CodeExecutionResult {
  // The code that was executed
  string code = 1;

  // Language of the code (e.g., "python")
  string language = 2;

  // Standard output from execution
  string stdout = 3;

  // Standard error from execution
  string stderr = 4;

  // Exit code (0 = success)
  int32 exit_code = 5;

  // Any files generated by the execution
  repeated GeneratedFile files = 6;
}

// GeneratedFile represents a file created during code execution
message GeneratedFile {
  // Filename
  string name = 1;

  // MIME type
  string mime_type = 2;

  // File content (base64 encoded for binary files)
  bytes content = 3;
}

// StructuredMetadata contains extracted metadata from structured output mode
message StructuredMetadata {
  // Primary intent classification
  string intent = 1;

  // True if response asks a clarifying question
  bool requires_user_action = 2;

  // Extracted named entities
  repeated StructuredEntity entities = 3;

  // 2-4 keyword tags
  repeated string topics = 4;

  // Calendar/meeting signals
  SchedulingIntent scheduling = 5;
}

// StructuredEntity represents an extracted named entity
message StructuredEntity {
  // Entity name as it appears in text
  string name = 1;

  // Entity type: person, organization, location, product, project, document,
  // event, money, date, investor, advisor, metric, technology, tool, service,
  // methodology, credential, timeframe, feature, url, email_address
  string type = 2;
}

// SchedulingIntent contains calendar/meeting signals
message SchedulingIntent {
  // True if scheduling intent was detected
  bool detected = 1;

  // Raw text like "next Tuesday at 2pm"
  string datetime_mentioned = 2;
}
